cleaning up test.ipynb with more class logic, removing some resets to see if that plays nicer with the scope

--- a/testing/tests.ipynb
+++ b/testing/tests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Serial Communication Successful\n"
+     ]
+    }
+   ],
    "source": [
     "assert send('reset')    == 'ok\\n'\n",
     "assert send('status')   == '0\\n'\n",
@@ -103,9 +111,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pll_mult': 4,\n",
+       " 0: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
+       " 1: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
+       " 2: {'freq': 0.0, 'phase': 0.0, 'amp': 1},\n",
+       " 3: {'freq': 0.0, 'phase': 0.0, 'amp': 1}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Helper for reading register values and putting them in a dictionary\n",
     "# takes in the frequency of the reference clock, assuming default of 125 MHz\n",
@@ -153,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,18 +194,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pll_mult 4\n",
+      "Channel 0 {'freq': 0.0, 'phase': 0.0, 'amp': 1}\n",
+      "Channel 1 {'freq': 0.0, 'phase': 0.0, 'amp': 1}\n",
+      "Channel 2 {'freq': 0.0, 'phase': 0.0, 'amp': 1}\n",
+      "Channel 3 {'freq': 0.0, 'phase': 0.0, 'amp': 1}\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "print(parser(readregs()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Register Readback Successful\n"
+     ]
+    }
+   ],
    "source": [
     "assert send('reset') == 'ok\\n', 'Could not run \"reset\" command'\n",
     "ad9959 = readregs()\n",
@@ -205,8 +249,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scope Class"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +307,7 @@
     "        self.write(f':TIMebase:SCALe {time}')\n",
     "\n",
     "    def annotate_screen(self, message):\n",
-    "        pass\n",
+    "        self.write(f':DISPlay:ANNotation:TEXT \"{message}\"')\n",
     "\n",
     "    def set_math_x_scale(self, x_value):\n",
     "        pass\n",
@@ -278,7 +329,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# my_instrument.query('*LRN?')\n",
     "# my_instrument.query('TIMebase:MODE?')\n",
@@ -306,8 +368,7 @@
     "\n",
     "my_instrument.write(':FUNCtion:OPERation SUBTract')\n",
     "my_instrument.write(':FUNCtion:OFFSet +500E-03')\n",
-    "my_instrument.write(':FUNCtion:SCALe +1.00E+00')\n",
-    "\n"
+    "my_instrument.write(':FUNCtion:SCALe +1.00E+00')"
    ]
   },
   {
@@ -319,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,9 +420,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## source\n",
     "freq0 = 125 * MHZ # source freq > ref freq\n",
@@ -391,9 +463,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\n'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# send(f\"\"\"\n",
     "#      abort\n",
@@ -428,9 +511,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\n'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "send('reset')"
    ]
@@ -439,14 +533,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\n'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "freq0 = 100 * MHZ\n",
-    "amp0 = 1\n",
+    "# freq0 = 100 * MHZ\n",
+    "# amp0 = 1\n",
     "\n",
-    "send('setchannels 20')\n",
-    "send(f'setfreq 0 {freq0}')\n",
-    "send(f'setamp 0 {amp0}')\n",
+    "# send('setchannels 20')\n",
+    "# send(f'setfreq 0 {freq0}')\n",
+    "# send(f'setamp 0 {amp0}')\n",
     "# my_instrument.save_screenshot('mirrortest0.png')"
    ]
   },
@@ -454,13 +559,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\n'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "freq1 = 90 * MHZ\n",
-    "amp1 = .7\n",
+    "# freq1 = 90 * MHZ\n",
+    "# amp1 = .7\n",
     "\n",
-    "# send(f'setfreq 1 {freq1}')\n",
-    "send(f'setamp 1 {amp1}')\n",
+    "# # send(f'setfreq 1 {freq1}')\n",
+    "# send(f'setamp 1 {amp1}')\n",
     "\n",
     "# my_instrument.save_screenshot('mirrortest1.png')\n"
    ]
@@ -474,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,14 +653,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table Programmed, Executing\n",
+      "Table Executed successfully\n"
+     ]
+    }
+   ],
    "source": [
     "my_instrument.write(':TIMebase:DELay 20.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 10.0E-09')\n",
     "my_instrument.write(\":CHANnel2:DISPlay 0\")\n",
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 0a: Single Stepping Frequency\"')\n",
+    "my_instrument.annotate_screen('Testing Mode 0a: Single Stepping Frequency')\n",
     "send('reset')\n",
     "\n",
     "startPoint = 10 * MHZ\n",
@@ -588,9 +713,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table Programmed, Executing\n",
+      "Table Executed successfully\n"
+     ]
+    }
+   ],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 0b: Single Stepping Amplitude\"')\n",
+    "my_instrument.annotate_screen(\"Testing Mode 0b: Single Stepping Amplitude\")\n",
     "\n",
     "startFreq = 100 * MHZ\n",
     "startPhase = 0\n",
@@ -636,9 +770,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table Programmed, Executing\n",
+      "Table Executed successfully\n"
+     ]
+    }
+   ],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 0c: Single Stepping Phase\"')\n",
+    "my_instrument.annotate_screen(\"Testing Mode 0c: Single Stepping Phase\")\n",
     "\n",
     "startFreq = 100 * MHZ\n",
     "startAmp = 1\n",
@@ -685,9 +828,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Table run from non-volatile memory successfully\n"
+     ]
+    }
+   ],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Table Save and Load\"')\n",
+    "my_instrument.annotate_screen(\"Testing Table Save and Load\")\n",
     "\n",
     "send('save')\n",
     "\n",
@@ -724,9 +875,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
+    }
+   ],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 1\"')\n",
+    "my_instrument.annotate_screen(\"Testing Mode 1\")\n",
     "my_instrument.write(':TIMebase:DELay 35.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 10.0E-06')\n",
     "\n",
@@ -771,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,9 +993,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
+    }
+   ],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 2: Frequency Sweep\"')\n",
+    "my_instrument.annotate_screen(\"Testing Mode 2: Frequency Sweep\")\n",
     "my_instrument.write(':TIMebase:DELay 40.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 10.0E-06')\n",
     "send('reset')\n",
@@ -902,9 +1069,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\nok\\nok\\nok\\nok\\nok\\nok\\nok\\nok\\nok\\nok\\n'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "send(\n",
     "f\"\"\"abort\n",
@@ -940,9 +1118,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
+    }
+   ],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 3: Phase Sweep\"')\n",
+    "my_instrument.annotate_screen(\"Testing Mode 3: Phase Sweep\")\n",
     "my_instrument.write(':TIMebase:DELay 35.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 10.0E-06')\n",
     "\n",
@@ -1009,7 +1195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing seti Mode 3: Phase Sweep\"')\n",
+    "my_instrument.annotate_screen(\"Testing seti Mode 3: Phase Sweep\")\n",
     "my_instrument.write(':FUNCtion:OFFSet 1.60E-00')\n",
     "my_instrument.write(':FUNCtion:SCALe +100E-03')\n",
     "send('reset')\n",
@@ -1077,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,9 +1275,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
+    }
+   ],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing set Mode 4: Amplitude Sweep, Single Step Freq, Phase\"')\n",
+    "my_instrument.annotate_screen(\"Testing set Mode 4: Amplitude Sweep, Single Step Freq, Phase\")\n",
     "my_instrument.write(':TIMebase:DELay 70.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 20.0E-06')\n",
     "my_instrument.write(':FUNCtion:SCALe +2.00E-00')\n",
@@ -1146,9 +1340,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\n'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "send('reset')"
    ]
@@ -1159,7 +1364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing seti Mode 4: Amplitude Sweep, Single Step Freq, Phase\"')\n",
+    "my_instrument.annotate_screen(\"Testing seti Mode 4: Amplitude Sweep, Single Step Freq, Phase\")\n",
     "\n",
     "my_instrument.write(':TIMebase:DELay 15.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 10.0E-06')\n",
@@ -1222,9 +1427,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ok\\n'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "send('reset')\n"
    ]
@@ -1233,9 +1449,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
+    }
+   ],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 5: Frequency Sweep, Single Step Amp, Phase\"')\n",
+    "my_instrument.annotate_screen(\"Testing Mode 5: Frequency Sweep, Single Step Amp, Phase\")\n",
     "\n",
     "my_instrument.write(':TIMebase:DELay 200.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 50.0E-06')\n",
@@ -1307,7 +1531,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing seti Mode 5: Frequency Sweep, Single Step Amp, Phase\"')\n",
+    "my_instrument.annotate_screen(\"Testing seti Mode 5: Frequency Sweep, Single Step Amp, Phase\")\n",
     "\n",
     "my_instrument.write(':TIMebase:DELay 80.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 20.0E-06')\n",
@@ -1391,11 +1615,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "send('reset')"
+    "# send('reset') ## this test seems to draw only after multiple runs??"
    ]
   },
   {
@@ -1404,7 +1628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing Mode 6: Phase Sweep, Single Step Amp, Freq\"')\n",
+    "my_instrument.annotate_screen(\"Testing Mode 6: Phase Sweep, Single Step Amp, Freq\")\n",
     "\n",
     "my_instrument.write(':TIMebase:DELay 150.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 50.0E-06')\n",
@@ -1525,7 +1749,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing seti Mode 6: Phase Sweep, Single Step Amp, Freq\"')\n",
+    "my_instrument.annotate_screen(\"Testing seti Mode 6: Phase Sweep, Single Step Amp, Freq\")\n",
     "\n",
     "my_instrument.write(':TIMebase:DELay 35.0E-06')\n",
     "my_instrument.write(':TIMebase:SCALe 10.0E-06')\n",
@@ -1574,9 +1798,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# my_instrument.write(':DISPlay:ANNotation:TEXT \"Testing finished\"')"
+    "my_instrument.annotate_screen(\"Testing finished\")"
    ]
   }
  ],
