added some handling for the readtable byte blocks to put in a header and pipe separators, currently looks ugly but its to make debugging easier (potentially)

--- a/testing/binary-tests.ipynb
+++ b/testing/binary-tests.ipynb
@@ -100,6 +100,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def insert_string(original_string, string_to_insert, index):\n",
+    "\n",
+    "    return original_string[:index] + string_to_insert + original_string[index:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Binary_Routines():\n",
     "    \"\"\"\n",
     "    Class handler for `setb` command to send binary tables to the dds-sweeper\n",
@@ -163,11 +174,23 @@
     "        if self.debug_run == True:\n",
     "            print('table executed')\n",
     "\n",
-    "    def read_table(self):\n",
+    "    def read_table(self, indices = None):\n",
     "        conn.write(b'readtable\\n')\n",
     "        for _ in range(self.MAX_SIZE):\n",
     "            resp = self.catch_response()\n",
-    "            print(resp)\n",
+    "\n",
+    "            ## No readability hint or end of response\n",
+    "            if indices == None or \"End\" in resp:\n",
+    "                print(resp)\n",
+    "            else:\n",
+    "                line = resp.split(\":\")\n",
+    "                str_of_bytes = line[-1]\n",
+    "                for ind in indices:\n",
+    "                    str_of_bytes = insert_string(str_of_bytes, \"|\", ind * 2)\n",
+    "                line[-1] = str_of_bytes\n",
+    "                print(''.join(line))\n",
+    "\n",
+    "            ## termination conditions\n",
     "            if \"End of\" in resp:\n",
     "                break\n",
     "            elif \"Cannot\" in resp:\n",
@@ -187,14 +210,13 @@
     "        print(channels)\n",
     "        print(memory_layout)\n",
     "        # self.assert_OK, 'something went wrong getting memory layout'\n",
-    "\n",
     "        \n",
     "Binary_Routine_Test = Binary_Routines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,12 +284,12 @@
     "                                (f1, a1, p1, t),\n",
     "                                (f3, a1, p1, t),\n",
     "                                 ]\n",
-    "                                 , dtype = dt)\n"
+    "                                 , dtype = dt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -303,29 +325,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instruction Table Dump:\n",
-      "Offset is: 0 | Raw bytes for instruction 0: 7F 00 F2 04 3D 70 A3 D7 05 10 00 06 00 13 FF\n",
-      "Offset is: 15 | Raw bytes for instruction 1: 01 00 F2 04 38 51 EB 85 05 10 00 06 00 11 F4\n",
-      "Offset is: 30 | Raw bytes for instruction 2: 05 00 F2 04 33 33 33 33 05 10 00 06 00 13 FF\n",
-      "Offset is: 45 | Raw bytes for instruction 3: 01 00 F2 04 38 51 EB 85 05 10 00 06 00 13 FF\n",
+      "Instruction Table Dump||||\n",
+      "Offset is 0 | Raw bytes for instruction 0| 7F 00 |F2 04 3D |70 A3| D7 05 10 00 06 00 13 FF\n",
+      "Offset is 15 | Raw bytes for instruction 1| 01 00 |F2 04 38 |51 EB| 85 05 10 00 06 00 11 F4\n",
+      "Offset is 30 | Raw bytes for instruction 2| 05 00 |F2 04 33 |33 33| 33 05 10 00 06 00 13 FF\n",
+      "Offset is 45 | Raw bytes for instruction 3| 01 00 |F2 04 38 |51 EB| 85 05 10 00 06 00 13 FF\n",
       "End of Instruction Table\n"
      ]
     }
    ],
    "source": [
-    "single_step_test.read_table()"
+    "single_step_test.read_table(indices=[0, 4, 9, 12])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +375,7 @@
        "''"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,12 +430,12 @@
     "                            (f2, f3, d, r, t),\n",
     "                            (f1, f1, d, r, t),\n",
     "                                 ]\n",
-    "                                 , dtype = dt)\n"
+    "                                 , dtype = dt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -440,35 +462,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instruction Table Dump:\n",
-      "Offset is: 0 | Raw bytes for instruction 0: FF 00 F2 04 33 33 33 33 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 38 51 EB 85 03 80 43 10\n",
-      "Offset is: 30 | Raw bytes for instruction 1: FF 00 F2 04 38 51 EB 85 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 3D 70 A3 D7 03 80 43 10\n",
-      "Offset is: 60 | Raw bytes for instruction 2: 0F 00 F2 04 33 33 33 33 07 01 01 08 FF FF FF FF 09 00 00 00 64 0A 3D 70 A3 D7 03 80 43 10\n",
-      "Offset is: 90 | Raw bytes for instruction 3: 0F 00 F2 04 33 33 33 33 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 33 33 33 33 03 80 43 10\n",
-      "Offset is: 120 | Raw bytes for instruction 4: 0F 00 F2 04 3D 70 A3 D7 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 3D 70 A3 D7 03 80 43 10\n",
-      "Offset is: 150 | Raw bytes for instruction 5: 0F 00 F2 04 38 51 EB 85 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 38 51 EB 85 03 80 43 10\n",
-      "Offset is: 180 | Raw bytes for instruction 6: 0F 00 F2 04 33 33 33 33 07 01 01 08 FF FF FF FF 09 00 00 00 64 0A 38 51 EB 85 03 80 43 10\n",
-      "Offset is: 210 | Raw bytes for instruction 7: FF 00 F2 04 33 33 33 33 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 3D 70 A3 D7 03 80 43 10\n",
-      "Offset is: 240 | Raw bytes for instruction 8: 0F 00 F2 04 38 51 EB 85 07 01 01 08 FF FF FF FF 09 00 00 00 64 0A 3D 70 A3 D7 03 80 43 10\n",
-      "Offset is: 270 | Raw bytes for instruction 9: 0F 00 F2 04 33 33 33 33 07 01 01 08 00 00 00 64 09 00 00 00 00 0A 33 33 33 33 03 80 43 10\n",
+      "Instruction Table Dump||||\n",
+      "Offset is 0 | Raw bytes for instruction 0| FF 00 F2 04 |33 33 33 33| 07 01 |01 08 00 00 00 64 09 00 00 00 00 0A 38 51 EB 85 03 80 43 10\n",
+      "Offset is 30 | Raw bytes for instruction 1| FF 00 F2 04 |38 51 EB 85| 07 01 |01 08 00 00 00 64 09 00 00 00 00 0A 3D 70 A3 D7 03 80 43 10\n",
+      "Offset is 60 | Raw bytes for instruction 2| 0F 00 F2 04 |33 33 33 33| 07 01 |01 08 FF FF FF FF 09 00 00 00 64 0A 3D 70 A3 D7 03 80 43 10\n",
+      "Offset is 90 | Raw bytes for instruction 3| 0F 00 F2 04 |33 33 33 33| 07 01 |01 08 00 00 00 64 09 00 00 00 00 0A 33 33 33 33 03 80 43 10\n",
+      "Offset is 120 | Raw bytes for instruction 4| 0F 00 F2 04 |3D 70 A3 D7| 07 01 |01 08 00 00 00 64 09 00 00 00 00 0A 3D 70 A3 D7 03 80 43 10\n",
+      "Offset is 150 | Raw bytes for instruction 5| 0F 00 F2 04 |38 51 EB 85| 07 01 |01 08 00 00 00 64 09 00 00 00 00 0A 38 51 EB 85 03 80 43 10\n",
+      "Offset is 180 | Raw bytes for instruction 6| 0F 00 F2 04 |33 33 33 33| 07 01 |01 08 FF FF FF FF 09 00 00 00 64 0A 38 51 EB 85 03 80 43 10\n",
+      "Offset is 210 | Raw bytes for instruction 7| FF 00 F2 04 |33 33 33 33| 07 01 |01 08 00 00 00 64 09 00 00 00 00 0A 3D 70 A3 D7 03 80 43 10\n",
+      "Offset is 240 | Raw bytes for instruction 8| 0F 00 F2 04 |38 51 EB 85| 07 01 |01 08 FF FF FF FF 09 00 00 00 64 0A 3D 70 A3 D7 03 80 43 10\n",
+      "Offset is 270 | Raw bytes for instruction 9| 0F 00 F2 04 |33 33 33 33| 07 01 |01 08 00 00 00 64 09 00 00 00 00 0A 33 33 33 33 03 80 43 10\n",
       "End of Instruction Table\n"
      ]
     }
    ],
    "source": [
-    "freq_sweep_test.read_table()"
+    "freq_sweep_test.read_table(indices=[0, 7, 13, 17])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,6 +532,9 @@
     "    Binary_Routine_Test.catch_response()\n",
     "\n",
     "    conn.write(b'setphase %d 0\\n' % i)\n",
+    "    Binary_Routine_Test.catch_response()\n",
+    "\n",
+    "    conn.write(b'setamp %d 1023\\n' % i)\n",
     "    Binary_Routine_Test.catch_response()\n",
     "\n",
     "dt = np.dtype([('start phase0', np.uint16), \n",
@@ -538,16 +563,16 @@
     "                                    (0, 0, d, r, t, p0, p2, d, r, t),\n",
     "                                    (0, 0, d, r, t, p2, p1, d, r, t),\n",
     "                                    (0, 0, d, r, t, p1, p0, d, r, t),\n",
-    "                                    (0, 0, d, r, t, p0, p1, d, r, t),\n",
-    "                                    (0, 0, d, r, t, p1, p2, d, r, t),\n",
-    "                                    (0, 0, d, r, t, p2, p0, d, r, t),\n",
+    "                                    # (0, 0, d, r, t, p0, p1, d, r, t),\n",
+    "                                    # (0, 0, d, r, t, p1, p2, d, r, t),\n",
+    "                                    # (0, 0, d, r, t, p2, p0, d, r, t),\n",
     "                                 ]\n",
     "                                 , dtype = dt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +581,7 @@
        "''"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +600,7 @@
      "output_type": "stream",
      "text": [
       "sending commands to 2 channels\n",
-      "Got response: ready for 132 bytes\n",
+      "Got response: ready for 66 bytes\n",
       "\n",
       "table written to memory\n",
       "table end command sent\n",
@@ -597,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -627,9 +652,6 @@
       "Offset is: 0 | Raw bytes for instruction 0: 7F 00 12 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10 00 22 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 80 00 00 00 03 C0 43 10\n",
       "Offset is: 55 | Raw bytes for instruction 1: 1F 00 12 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10 00 22 05 10 00 07 01 01 08 FF FF FF FF 09 00 04 00 00 0A 80 00 00 00 03 C0 43 10\n",
       "Offset is: 110 | Raw bytes for instruction 2: 0C 00 12 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10 00 22 05 00 00 07 01 01 08 FF FF FF FF 09 00 04 00 00 0A 40 00 00 00 03 C0 43 10\n",
-      "Offset is: 165 | Raw bytes for instruction 3: 6C 00 12 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10 00 22 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 40 00 00 00 03 C0 43 10\n",
-      "Offset is: 220 | Raw bytes for instruction 4: 4D 00 12 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10 00 22 05 10 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 80 00 00 00 03 C0 43 10\n",
-      "Offset is: 275 | Raw bytes for instruction 5: 3F 00 12 05 00 00 07 01 01 08 00 04 00 00 09 00 00 00 00 0A 00 00 00 00 03 C0 43 10 00 22 05 00 00 07 01 01 08 FF FF FF FF 09 00 04 00 00 0A 80 00 00 00 03 C0 43 10\n",
       "End of Instruction Table\n"
      ]
     }
@@ -640,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,11 +693,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# conn.write(b'program\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in range(4):\n",
+    "#     conn.write(b'setfreq %d 100000000\\n' % i)\n",
+    "#     Binary_Routine_Test.catch_response()\n",
+    "\n",
+    "#     conn.write(b'setphase %d 0\\n' % i)\n",
+    "#     Binary_Routine_Test.catch_response()\n",
+    "\n",
+    "#     conn.write(b'setamp %d 1023\\n' % i)\n",
+    "#     Binary_Routine_Test.catch_response()\n",
+    "\n",
+    "# dt = np.dtype([('start amp0', np.uint16), \n",
+    "#                ('stop amp0', np.uint16), \n",
+    "#                ('delta0', np.uint16), \n",
+    "#                ('rate0', np.uint8),\n",
+    "#                ('time0', np.uint32),\n",
+    "#                ('start amp1', np.uint16), \n",
+    "#                ('stop amp1', np.uint16), \n",
+    "#                ('delta1', np.uint16), \n",
+    "#                ('rate1', np.uint8), \n",
+    "#                ('time1', np.uint32)])\n",
+    "\n",
+    "# p0 = get_pow(phase = 0)\n",
+    "# p1 = get_pow(phase = 90)\n",
+    "# p2 = get_pow(phase = 180)\n",
+    "# p3 = get_pow(phase = 270)\n",
+    "# p4 = get_pow(phase = 360)\n",
+    "\n",
+    "# d = 1\n",
+    "# r = 1\n",
+    "# t = 2\n",
+    "\n",
+    "\n",
+    "# phase_sweep_instructions = np.array([\n",
+    "#                                     (0, 0, d, r, t, p0, p2, d, r, t),\n",
+    "#                                     (0, 0, d, r, t, p2, p1, d, r, t),\n",
+    "#                                     (0, 0, d, r, t, p1, p0, d, r, t),\n",
+    "#                                     (0, 0, d, r, t, p0, p1, d, r, t),\n",
+    "#                                     (0, 0, d, r, t, p1, p2, d, r, t),\n",
+    "#                                     (0, 0, d, r, t, p2, p0, d, r, t),\n",
+    "#                                  ]\n",
+    "#                                  , dtype = dt)"
    ]
   }
  ],
